src/cses/bit_strings/clang-tidy.txt
1 warning and 1 error generated.
Error while processing /Users/michael/repos/competitive-programming/src/cses/bit_strings/bit_strings.cpp.
/Users/michael/repos/competitive-programming/src/cses/bit_strings/bit_strings.cpp:3:10: error: 'cstdint' file not found [clang-diagnostic-error]
    3 | #include <cstdint>
      |          ^~~~~~~~~
/Users/michael/repos/competitive-programming/src/cses/bit_strings/bit_strings.cpp:10:5: warning: this loop is infinite; none of its condition variables (exp) are updated in the loop body [bugprone-infinite-loop]
   10 |     while (exp > 0) {
      |     ^
Found compiler error(s).
